# social-docs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
docs/: conf.py  copyright.rst  developer_intro.rst  exceptions.rst  idp_setup_guide.rst  index.rst  installing.rst  intro.rst  maintainers.rst  pipeline.rst  requirements.txt  security.rst  storage.rst  strategies.rst  tests.rst  thanks.rst  use_cases.rst
docs/api/: index.rst
docs/backends/: amazon.rst  angel.rst  aol.rst  apple.rst  appsfuel.rst  arcgis.rst  auth0.rst  auth0_openidconnect.rst  azuread.rst  battlenet.rst  beats.rst  behance.rst  belgium_eid.rst  bitbucket.rst  bitbucket_datacenter_oauth2.rst  box.rst  bungie.rst  cas.rst  clef.rst  cognito.rst  coinbase.rst  coursera.rst  dailymotion.rst  digitalocean.rst  discogs.rst  discord.rst  discourse.rst  disqus.rst  docker.rst  douban.rst  dribbble.rst  drip.rst  dropbox.rst  edmodo.rst  email.rst  etsy.rst  eventbrite.rst  eveonline.rst  evernote.rst  facebook.rst  (+110 more)
docs/configuration/: cherrypy.rst  django.rst  django_quickstart.rst  flask.rst  index.rst  porting_from_dsa.rst  pyramid.rst  settings.rst  webpy.rst
site/: index.html
