[project]
name = "python-social-auth-docs"
requires-python = ">=3.11"
version = "2025.0"

[tool.ruff.lint]
ignore = [
  "COM",  # CONFIG: No trailing commas
  "D203",  # CONFIG: incompatible with D211
  "D212",  # CONFIG: incompatible with D213
  "E501",  # WONTFIX: we accept long strings (rest is formatted by ruff)
  'ISC001',  # CONFIG: formatter
  "T201",  # CONFIG: print is used
  "S603",  # CONFIG: subprocess is being used
  "S607",  # CONFIG: subprocess executes system tools
  "ANN",  # TODO: missing type annotations
  "N",  # TODO: wrong naming conventions
  "PTH",  # TODO: not using pathlib
  "D"  # TODO: missing documentation
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]


[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
